# mucal

./: README.md  pyproject.toml
mucal/: cli.py
