[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mucal"
version = "2.1.3"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description = "Remove week entries from Murdoch student calendar feed"
readme = "README.md"

[tool.poetry.scripts]
mucal = 'mucal.cli:cli'

[tool.poetry.dependencies]
python = ">=3.7"
click = "^7.1.1"
requests = "^2.23.0"
icalendar = "^4.0.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.6"
flake8 = "^3.7.9"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
